*SVN*

* Add :case_sensitive option to validates_uniqueness_of (closes #3090) [Rick]

    class Account < ActiveRecord::Base
      validates_uniqueness_of :email, :case_sensitive => false
    end

* Allow multiple association extensions with :extend option (closes #4666) [Josh Susser]

    class Account < ActiveRecord::Base
      has_many :people, :extend => [FindOrCreateByNameExtension, FindRecentExtension]
    end


*1.14.2* (April 9th, 2005)

* Fixed calculations for the Oracle Adapter (closes #4626) [Michael Schoen]


*1.14.1* (April 6th, 2005)

* Fix type_name_with_module to handle type names that begin with '::'. Closes #4614. [Nicholas Seckar]

* Fixed that that multiparameter assignment doesn't work with aggregations (closes #4620) [Lars Pind]

* Enable Limit/Offset in Calculations (closes #4558) [lmarlow@yahoo.com]

* Fixed that loading including associations returns all results if Load IDs For Limited Eager Loading returns none (closes #4528) [Rick]

* Fixed HasManyAssociation#find bugs when :finder_sql is set #4600 [lagroue@free.fr]

* Allow AR::Base#respond_to? to behave when @attributes is nil [zenspider]

* Support eager includes when going through a polymorphic has_many association. [Rick]

* Added support for eagerly including polymorphic has_one associations. (closes #4525) [Rick]

    class Post < ActiveRecord::Base
      has_one :tagging, :as => :taggable
    end
    
    Post.find :all, :include => :tagging

* Added descriptive error messages for invalid has_many :through associations: going through :has_one or :has_and_belongs_to_many [Rick]

* Added support for going through a polymorphic has_many association: (closes #4401) [Rick]

    class PhotoCollection < ActiveRecord::Base
      has_many :photos, :as => :photographic
      belongs_to :firm
    end
     
    class Firm < ActiveRecord::Base
      has_many :photo_collections
      has_many :photos, :through => :photo_collections
    end
